[package]
name = "chatwise"
version = "0.1.0"
edition = "2021"
description = "CLI application to chat with ChatGPT"
authors = ["Bob Peters <contact@rust-trends.com>"]
homepage = "https://rust-trends.com"
repository = "https://github.com/Rust-Trends/chatwise"
license = "GNU GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
indicatif = "0.17.3"
reqwest = { version ="0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
